--- a/index.html
+++ b/index.html
@@ -59,5 +59,6 @@
   <script type="module" src="supabase.js"></script>
   <script type="module" src="deploy.js"></script>
   <script type="module" src="preview.js"></script>
+  <script src="gpt-bridge.js"></script>
 </body>
 </html>
